Fixing a bug in CSS file: "Marked" lable in the `Inbound clients` list can cause style overflow.
However there is no guarantee that this commit will fix the bug as I need a environment to reproduce the problem which I don't have it.

This problem was pointed out by GPU in topic https://www.v2ex.com/t/275486. Thank you.

--- a/statusui/src/common.css
+++ b/statusui/src/common.css
@@ -217,7 +217,7 @@ ul.layout { padding: 0; margin: 0; }
 #status-marked-clients .count span.label { font-size: 0.5em; }
 #status-marked-clients .c-info .address { overflow: auto; border-left: 1px solid #e3e3e3; padding-left: 30px; }
 #status-marked-clients .c-info .address .title { font-size: 1.8em; color: #6cc; }
-#status-marked-clients .c-info .address .info { font-size: 0.9em; color: #666; }
+#status-marked-clients .c-info .address .info { font-size: 0.9em; margin: 2px 0; color: #666; }
 #status-marked-clients .c-info .address .info span.iitem { margin-right: 10px; }
 #status-marked-clients .c-info .address .info span.iitem.orgl { padding: 2px 5px; background: #ec9; font-size: 0.9em; color: #fff; }
 #status-marked-clients .c-record .records {  }
